# rungu

./: .cora.yaml  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  progress.md
.github/actions/cora-review/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  project-sync.yml  release.yml  security.yml
crates/rungu-api/: Cargo.toml
crates/rungu-api/src/: attachment_routes.rs  auth_routes.rs  comment_routes.rs  error.rs  lib.rs  oauth.rs  openapi.rs  post_routes.rs  project_routes.rs  vote_routes.rs
crates/rungu-api/tests/: api_test.rs
crates/rungu-auth/: Cargo.toml
crates/rungu-auth/src/: config.rs  lib.rs  middleware.rs  session.rs
crates/rungu-core/: Cargo.toml
crates/rungu-core/migrations/postgres/: 001_initial.sql
crates/rungu-core/migrations/sqlite/: 001_initial.sql
crates/rungu-core/src/: lib.rs  storage.rs  store.rs
crates/rungu-core/tests/: store_test.rs
crates/rungu-mcp/: Cargo.toml
crates/rungu-mcp/src/: lib.rs
crates/rungu-proto/: Cargo.toml
crates/rungu-proto/src/: lib.rs
crates/rungud/: Cargo.toml
crates/rungud/src/: config.rs  main.rs  server.rs  spa.rs
docs/: PRIORITAS-PENGERJAAN.md  cli-reference.md  configuration.md  docker.md  getting-started.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/auth/: github.md  google.md  keycloak.md  overview.md
docs/development/: architecture.md  contributing.md  roadmap.md
docs/features/: attachments.md  categories.md  comments.md  keyboard-shortcuts.md  multi-board.md  search.md  voting.md
docs/integrations/: api.md  mcp.md
docs/public/: _redirects
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: shortcuts.test.ts  shortcuts.ts  utils.test.ts  utils.ts
web/src/lib/api/: client.test.ts  client.ts  types.ts
web/src/lib/components/: AttachmentGallery.svelte  AuthProviderButtons.svelte  CategoryBadge.svelte  CommentThread.svelte  PostCard.svelte  PostForm.svelte  ShortcutHelp.svelte  StatusBadge.svelte  ThemeToggle.svelte  VoteButton.svelte
web/src/lib/components/ui/badge/: badge.svelte
web/src/lib/components/ui/button/: button.svelte
web/src/lib/components/ui/input/: input.svelte
web/src/lib/components/ui/textarea/: index.ts  textarea.svelte
web/src/routes/: +layout.svelte  +page.svelte  layout.svelte
web/src/routes/admin/: +page.svelte
web/src/routes/board/[slug]/: +page.svelte
web/src/routes/board/[slug]/changelog/: +page.svelte
web/src/routes/board/[slug]/post/[id]/: +page.svelte
web/src/routes/board/[slug]/roadmap/: +page.svelte
web/src/routes/login/: +page.svelte
