[workspace]
resolver = "2"
members = [
    "crates/rungu-proto",
    "crates/rungu-core",
    "crates/rungu-auth",
    "crates/rungu-api",
    "crates/rungu-mcp",
    "crates/rungud",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/codecoradev/rungu"
rust-version = "1.88"

# Workspace-wide lint config. `uninlined_format_args` is a style preference
# (format!("...", x) vs format!("...{x}")); we allow it to avoid churn across
# the codebase on every new stable. Individual crates may still opt-in stricter.
[workspace.lints.rust]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
uninlined_format_args = "allow"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tower = "0.5"
# governor removed — MSRV incompatible. Rate limiting via simple middleware.
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Auth / JWT
jsonwebtoken = "9"
openidconnect = "3"
url = "2"

# Crypto
argon2 = "0.5"

# Embed
mime_guess = "2"
rust-embed = { version = "8", features = ["include-exclude"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error monitoring (TrapFall integration)
sentry = { version = "0.35", default-features = false, features = ["reqwest", "rustls", "tracing"] }
sentry-tracing = { version = "0.35", default-features = false }
sentry-tower = { version = "0.35", default-features = false, features = ["http"] }

# Pin quinn-proto >= 0.11.15 (RUSTSEC-2026-0185: memory exhaustion)
# Transitive via sentry → reqwest → hyper-rustls → quinn-proto
quinn-proto = ">=0.11.15"



# MCP
serde_jsonrpc = "0.2"

# Errors
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Internal crates
rungu_proto = { path = "crates/rungu-proto" }
rungu_core = { path = "crates/rungu-core" }
rungu_auth = { path = "crates/rungu-auth" }
rungu_api = { path = "crates/rungu-api" }
rungu_mcp = { path = "crates/rungu-mcp" }

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
