# rungu-api
[package]
name = "rungu_api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API routes (Axum handlers)"

[dependencies]
rungu_proto = { workspace = true }
rungu_core = { workspace = true }
rungu_auth = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
utoipa = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rungu_core = { workspace = true }
tempfile = "3"
