# rungu-auth
[package]
name = "rungu_auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-provider OAuth + JWT session + middleware"

[dependencies]
rungu_proto = { workspace = true }
rungu_core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
