# rungu-core
[package]
name = "rungu_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic — storage, business logic, SQLite queries"

[dependencies]
rungu_proto = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"
