# rungu-proto
[package]
name = "rungu_proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire types and protocol definitions for Rungu"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }

[lints]
workspace = true
