# rungud
[package]
name = "rungud"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rungu daemon binary — ties all crates together"

[[bin]]
name = "rungu"
path = "src/main.rs"

[dependencies]
rungu_proto = { workspace = true }
rungu_core = { workspace = true }
rungu_auth = { workspace = true }
rungu_api = { workspace = true }
rungu_mcp = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
utoipa-swagger-ui = { workspace = true }
# axum-governor removed — MSRV incompatible
utoipa = { workspace = true }

[lints]
workspace = true
